vpc-private/modules/network/aws_vpc.tf
resource "aws_vpc" "this" {
  cidr_block = var.vpc_cidr

  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "${var.sysid}-${var.env}-vpc"
  }
}
